[package]
name = "games101_01"
version = "0.1.0"
authors = ["yanbin"]
edition = "2018"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
#opencv = {version = "0.47", default-features = false, features = ["opencv-34", "buildtime-bindgen"]}
[dependencies.sdl2]
version = "0.34.3"
features = ["static-link"]
default-features = false